Fixed Aspect Ratio Issues and Css Slider width on mobile views

--- a/cartridges/app_page_designer_plus/cartridge/client/default/scss/experience/components/pd_assets/pdPlusCssSlider.scss
+++ b/cartridges/app_page_designer_plus/cartridge/client/default/scss/experience/components/pd_assets/pdPlusCssSlider.scss
@@ -158,7 +158,8 @@
             padding: 4%;
 
             @include media-breakpoint-down(sm) {
-                padding: 2%;
+                padding: 4%;
+                max-width: 100%;
             }
 
             .slideContent {
